--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 </head>
-<body class="min-100-vh flex-column">
+<body class="min-vh-100 d-flex flex-column">
   <header class="p-5 text-center text-white bg-primary">
     <h1>Weather Dashboard</h1>
     <h2 class="header">Date/Time</h2>
   </header>
-    <div class="container mt-3">
-        <form id="search">
-          <input id="input1" type="text" name="city" placeholder="Enter city here">
-          <button id="search" type="submit">Search</button>
-        </form>
-      </section>
-      
-    </main>
-    
+  <div class="container mt-3">
+    <h2>Search for a city</h2>
+    <form id="entryForm">
+      <input id="input1" type="text" name="city" placeholder="Enter city here">
+      <button id="search" type="submit">Search</button>
+    </form>
+    <ul id="cityHistoryContainer"></ul>
+  </div>
+  <div class="container mt-3" id="weatherContainer"></div>
+<div id="cityName"></div>
+<div id="temperature"></div>
+<div id="description"></div>
+  
+  <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
